Fix visibility of tabs when the dropdown goes out of view

--- a/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/new_dashboard.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/new_dashboard.scss
@@ -415,6 +415,7 @@ body {
 .main-container {
   margin:     0;
   background: transparent;
+  overflow: visible;
 }
 
 .dashboard-group_title {
